# linefollower-robot

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: deploy-docs.yml
Roboter_Final/doc/: Mainpage.md  doxyfile
Roboter_Final/inc/: countdown_states.h  fsm.h  states.h  usart.h
Roboter_Final/src/: adc.c  check_lap_state.c  fsm.c  states.c  util.c
doc/: Mainpage.md  doxyfile  doxyfile.save
doc/html/: Beginners.html  Test.html  adc_8c.html  adc_8c__incl.map  adc_8c__incl.md5  adc_8h.html  adc_8h__dep__incl.map  adc_8h__dep__incl.md5  adc_8h__incl.map  adc_8h__incl.md5  adc_8h_source.html  annotated.html  (+139 more)
inc/: adc.h  check_lap.h  check_lap_state.h  countdown_states.h  fsm.h  iesadc.h  iesleds.h  iesmotors.h  iesusart.h  led_controller.h  linefollower.h  main.h  motor_controller.h  states.h  usart.h  util.h
res/: compact.simu
src/: adc.c  check_lap.c  check_lap.h  check_lap_state.c  countdown_states.c  fsm.c  iesadc.c  iesadc.h  iescountdown.c  iescountdown.h  iesleds.c  iesleds.h  iesmotors.c  iesusart.c  iesusart.h  led_controller.c  linefollower.c  linefollower.h  main.c  main.h  motor_controller.c  states.c  usart.c  util.c
woche3/: E3T2.c  E3T3.c  E3T4.c  StructInfo.c  compile.sh  iesusart.c  tmpfile  tmpfile.hex
woche4/: E4T3.c  Makefile  check_lap.c  check_lap.h  compact.simu  compile.sh  doxyfile.save  forward_state.c  fsm.c  fsm.h  iesadc.c  iesadc.h  iescountdown.c  iescountdown.h  iesleds.c  iesleds.h  iesmotors.c  iesmotors.h  iesusart.c  iesusart.h  init_state.c  left_state.c  linefollower.c  linefollower.h  main.c  main.h  mainpage.md  right_state.c  skeleton_motors.c  states.c  states.h  tmpfile  tmpfile.hex  typedefs.h  util.c  util.h
(+421 files in other folders)
